clusters/home/apps/ai/open-webui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-internal
  namespace: open-webui
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "ai.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-internal.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ai.layertwo.dev`)
    kind: Rule
    services:
    - name: open-webui
      port: 80
